--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,21 @@
-main {
-  background-color: yellow;
+:root {
+    --main-color: #03a9f3;
+    --secondary-color: #ea1e63;
+    --secondary-color-dark: #b00c42;
 }
-footer {
-  background-color: pink;
+body,
+body * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
+        sans-serif;
+}
+.bg-main {
+    background-color: var(--main-color);
+}
+.bg-secondary {
+    background-color: var(--secondary-color);
 }
